--- a/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Index.cshtml
@@ -113,7 +113,7 @@
 <div class="main-content">
     <header class="page-header">
         <h3>
-            <i class="icon-users"></i><span>Fabric Oven Test</span>
+            <i class="icon-users"></i><span>Fabric Color Fastness</span>
         </h3>
     </header>
 
@@ -171,9 +171,281 @@
                     </table>
                 </div>
 
-        
-      
+                <div style="margin-top: 1em;">
+                    <table class="DataTable">
+                        <tbody>
+                            <tr>
+                                <td style="width: 10vw;"><h5>SP#</h5></td>
+                                <td style="width: 20vw;">
+                                    @Html.TextBoxFor(o => o.PoID, "", new { @readonly = "readonly" })
+                                </td>
+                                <td style="width: 10vw;"><h5>Style#</h5></td>
+                                <td style="width: 20vw;">
+                                    @Html.DisplayFor(o => o.StyleID, "", "")
+                                </td>
+                                <td style="width: 10vw;"><h5>Brand</h5></td>
+                                <td style="width: 20vw;">
+                                    @Html.DisplayFor(o => o.BrandID, "", "")
+                                </td>
+                            </tr>
+                            <tr>
+                                @{
+                                    string EarliestDate = Model.EarliestDate.HasValue ? Model.EarliestDate.Value.ToString("yyyy/MM/dd") : string.Empty;
+                                    string EarliestSCIDel = Model.EarliestSCIDel.HasValue ? Model.EarliestSCIDel.Value.ToString("yyyy/MM/dd") : string.Empty;
+                                    string TargetLeadTime = Model.TargetLeadTime.HasValue ? Model.TargetLeadTime.Value.ToString("yyyy/MM/dd") : string.Empty;
+                                    string CompletionDate = Model.CompletionDate.HasValue ? Model.CompletionDate.Value.ToString("yyyy/MM/dd") : string.Empty;
+
+                                }
+                                <td><h5>Season</h5></td>
+                                <td>
+                                    @Html.DisplayFor(o => o.SeasonID, "", "")
+                                </td>
+                                <td><h5>Earliest Est. Cutting Date</h5></td>
+                                <td>
+                                    @EarliestDate
+                                </td>
+                                <td><h5>Earliest SCI Del</h5></td>
+                                <td>
+                                    @EarliestSCIDel
+                                </td>
+                            </tr>
+                            <tr>
+
+                                <td><h5>Target Lead Time</h5></td>
+                                <td>
+                                    @TargetLeadTime
+                                </td>
+                                <td><h5>Completion Date</h5></td>
+                                    @CompletionDate
+                                <td>
+                                </td>
+                                <td><h5>Article % of Inspection</h5></td>
+                                <td>
+                                    @Html.DisplayFor(o => o.ArticlePercent, "", "")
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><h5>Remark</h5></td>
+                                <td colspan="5">
+                                    @Html.TextBoxFor(o => o.OvenLaboratoryRemark, "", new { @readonly = "readonly", @class = "OnlyEdit" })
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><h5>Create By</h5></td>
+                                <td colspan="2">
+                                    @Html.DisplayFor(o => o.CreateBy, "", "")
+                                </td>
+
+                                <td>
+                                    <h5>Edit By</h5>
+                                </td>
+                                <td colspan="2">
+                                    @Html.DisplayFor(o => o.EditBy, "", "")
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div style="margin-top: 1em; width: 92vw; overflow:auto;">
+                    <table class="DetailTable DataTable" style="text-align:center;">
+                        <thead style="text-align: center">
+                            @{
+                                <tr>
+                                    <th><h4>No. of Test</h4></th>
+                                    <th><h4>Test Date</h4></th>
+                                    <th><h4>Article</h4></th>
+                                    <th><h4>Result</h4></th>
+                                    <th><h4>Inspector</h4></th>
+                                    <th><h4>Remark</h4></th>
+                                    <th><h4>Last Update</h4></th>
+                                    <th><h4></h4></th>
+                                    <th><h4></h4></th>
+
+                                </tr>
+                            }
+                        </thead>
+                        <tbody>
+                            @for (int i = 0; i <= Model.ColorFastness_MainList.Count - 1; i++)
+                            {
+                                string aHref = "";
+                                <tr>
+                                    <td style="width:10vw;">
+
+                                        @if (Model.ColorFastness_MainList[i].TestNo > 0)
+                                        {
+                                            aHref = Url.Action("Detail", "FabricColorFastness", new { POID = Model.PoID, TestNo = Model.ColorFastness_MainList[i].TestNo, EditMode = false });
+                                        }
+
+                                        <a href="@aHref" idx="@Model.PoID ," idv="@Model.ColorFastness_MainList[i].TestNo">
+                                            @Html.DisplayFor(o => Model.ColorFastness_MainList[i].TestNo, "", "")
+                                        </a>
+                                    </td>
+
+                                    @{
+                                        string InspDate = Model.ColorFastness_MainList[i].InspDate.HasValue ? Model.ColorFastness_MainList[i].InspDate.Value.ToString("yyyy/MM/dd") : string.Empty;
+                                        string ResultColor = Model.ColorFastness_MainList[i].Result == "Pass" ? "blue" : "red";
+                                        string showPic = Model.ColorFastness_MainList[i].Status == "New" ? string.Empty : "display: none";
+                                    }
+
+                                    <td style="width:10vw;">
+                                        InspDate
+                                    </td>
+                                    <td style="width:10vw;">
+                                        @Html.DisplayFor(o => Model.ColorFastness_MainList[i].Article, "", "")
+                                    </td>
+                                    <td class="@ResultColor" style="width:10vw;">
+                                        @Html.DisplayFor(o => Model.ColorFastness_MainList[i].Result, "", "")
+                                    </td>
+
+                                    <td style="width:10vw;">
+                                        @Html.DisplayFor(o => Model.ColorFastness_MainList[i].Inspector, "", "")
+                                    </td>
+                                    <td style="width:10vw;">
+                                        @Html.DisplayFor(o => Model.ColorFastness_MainList[i].Remark, "", "")
+                                    </td>
+                                    <td style="width:10vw;">
+                                        @Html.DisplayFor(o => Model.ColorFastness_MainList[i].LastUpdate, "", "")
+                                    </td>
+                                    <td style="width:10vw;">
+                                        <img class="detailEdit" style="@showPic" onclick="DetailView('@Model.ColorFastness_MainList[i].TestNo')" src="~/Image/Icon/Edit.png" width="30" />
+                                    </td>
+                                    <td style="width:10vw;">
+                                        <img class="detailDelete" style="@showPic" onclick="DetailDelete('@Model.ColorFastness_MainList[i].TestNo')" src="~/Image/Icon/Delete.png" width="30" />
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    var msg;
+    var EditMode;
+    $(function () {
+        msg = new MessagerAlert();
+        EditMode = false;
+        IsEditModeChange();
+
+    });
+
+    function IsEditModeChange() {
+        EditModeButtionBind();
+
+        if (EditMode) {
+            $(".rowHeader input[type='text']").attr("disabled", "disabled");
+            $(".rowHeader input[type='button']").unbind('click').addClass("IsEditModeQuery");
+            $('#btnQuery').addClass("IsEditModeQuery");
+            $("#Edit, #New").unbind('click').removeClass("IsEditMode");
+            $('#Save, #Undo').addClass("IsEditMode");
+            $(".DataTable input[type='text']").removeAttr("disabled");
+            $(".DetailTable img").addClass('display-None');
+
+            $(".OnlyEdit").removeAttr("disabled").removeAttr("readonly");
+
+            $('#btnQuery').on('click', function () {
+                return false;
+            });
+        }
+        else {
+            $(".rowHeader input[type='text']").removeAttr("disabled");
+            $(".rowHeader input[type='button']").removeClass("IsEditModeQuery");
+            $('#btnQuery').unbind('click').removeClass("IsEditModeQuery");
+
+            if ($('#POID').val() != undefined && $('#POID').val() != '')
+            {
+                $("#Edit, #New").addClass("IsEditMode");
+            }
+
+            $('#Save, #Undo').unbind('click').removeClass("IsEditMode");
+            $(".DataTable input[type='text']").attr("disabled", "disabled");
+            $(".DetailTable img").removeClass('display-None');
+
+
+            $('#btnQuery').on('click', function () {
+                if ($('#POID').val() == '') {
+                    msg.WithError("SP# cannot be empty");
+                    return false;
+                }
+            });
+        }
+    }
+
+
+    function EditModeButtionBind() {
+        $('#Edit').on('click', function () {
+            if ($('#PoID').val() == "") {
+                return;
+            }
+
+            if ($('#PoID').val() != "") {
+                EditMode = true;
+                IsEditModeChange();
+            }
+        });
+
+        $('#Save').on('click', function () {
+
+            var main = {
+                POID: $('#PoID').val(),
+                Remark: $('#Remark').val()
+            };
+
+            SaveData(main);
+        });
+
+        function SaveData(main) {
+        $.ajax({
+            url: "@Url.Action("SaveMaster", "FabricColorFastness", new { Area = "BulkFGT" })",
+            type: 'POST',
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify({ main: main, }),
+            async: false,
+            success: function (data) {
+
+                location.href = '@Url.Action("IndexBack")?POID=' + document.getElementById("PoID").value.trim();
+
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                console.log(xhr.responseText);
+            }
+        });
+    }
+
+        $('#Undo').on('click', function () {
+            EditMode = false;
+            IsEditModeChange();
+            location.href = '@Url.Action("IndexBack")?POID=' + document.getElementById("PoID").value.trim();
+        });
+
+
+        $('#New').on('click', function () {
+            if ($('#PoID').val() == "") {
+                return;
+            }
+            location.href = '@Url.Action("Detail")?PoID=' + document.getElementById("PoID").value.trim() + '&TestNo=&EditMode=True';
+        });
+
+
+    }
+
+    function DetailView(TestNo) {
+        location.href = '@Url.Action("Detail")?PoID=' + document.getElementById("PoID").value.trim() + '&TestNo=' + TestNo + '&EditMode=True' ;
+    }
+
+
+    function DetailDelete(TestNo) {
+
+        msg.WithConfirm('Do you want to delete the data ?',
+        function ()
+        {
+        }, null);
+
+     }
+
+
+</script>
