--- a/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
@@ -1316,6 +1316,14 @@
             StopScreen();
             $('#Screenshot').addClass("display-None");
         });
+
+        $.ajaxSetup({
+            statusCode: {
+                440: function () {
+                    window.location.href = "@Url.Action("Login", "Home")";
+                }
+            }
+        })
     });
 
     function IsEditModeButtonChange() {
@@ -1425,7 +1433,7 @@
 
         $('#txtSize').on("change", function () {
             $('#txtProductType, #txtSizeQty, #txtSizeBalanceQty, #txtOrderQty, #txtOrderBalanceQty').val("");
-            $(".table-top3>tbody>tr>td>input[type='text']").val("");
+          ★ Action★ ActionUrlr★ Actionl $(".table-top3>tbody>tr>td>input[type='text']").val("");
             $("#DefectType>tbody>tr").remove();
             SizeCheck($('#txtStyle').val(), $('#txtSP').val(), $('#txtArticle').val(), $(this).val());
         });
@@ -2655,6 +2663,7 @@
             data: JSON.stringify({ }),
             async: true,
             success: function (data) {
+
                 var tableContent = "";
                 var spOption = "", styleOption = "", articleOption = "", sizeOption = "";
                 var spArrList = ['All'], styleArrList = ['All'], articleArrList = ['All'], sizeArrList = ['All'];
@@ -2920,7 +2929,7 @@
                     tbody += "<td class='bg-lightblue'><p idx='Tol-'>" + value.Tol1 + "</p></td>";
                     tbody += "<td class='bg-lightgray'><p idx='standard'>" + value.SizeSpec + "</p></td>";
 
-                    if (value.SizeCode.toUpperCase() == "INCH") {
+                    if (value.SizeUnit.toUpperCase() == "INCH") {
                         tbody += "<td class='" + bgColor + "'><input type='text' idx='SizeSpec' placeholder= '__ __/__' class='" + bgColor + "' " + readonly + "></td>";
                     }
                     else {
