--- a/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
@@ -1433,7 +1433,7 @@
 
         $('#txtSize').on("change", function () {
             $('#txtProductType, #txtSizeQty, #txtSizeBalanceQty, #txtOrderQty, #txtOrderBalanceQty').val("");
-          ★ Action★ ActionUrlr★ Actionl $(".table-top3>tbody>tr>td>input[type='text']").val("");
+            $(".table-top3>tbody>tr>td>input[type='text']").val("");
             $("#DefectType>tbody>tr").remove();
             SizeCheck($('#txtStyle').val(), $('#txtSP').val(), $('#txtArticle').val(), $(this).val());
         });
