--- a/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Index.cshtml
@@ -114,6 +114,10 @@
         <h3>
             <i class="icon-users"></i><span>Fabric Oven Test</span>
         </h3>
+        <div class="breadcrumb">
+            <div>Home</div>
+            <div class="current">Fabric Oven Test</div>
+        </div>
     </header>
 
     <div class="main-area">
