--- a/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Detail.cshtml
@@ -149,6 +149,11 @@
         <h3>
             <i class="icon-users"></i><span>Fabric Oven Test</span>
         </h3>
+        <div class="breadcrumb">
+            <div>Home</div>
+            <div >Fabric Oven Test</div>
+            <div class="current">Detail</div>
+        </div>
     </header>
 
     <div class="main-area">
