ISP20211069 - Fabric Oven Test 整合

--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
@@ -1216,7 +1216,7 @@
         });
 
         $.ajax({
-            url: "@Url.Action("FailMain", "GarmentTest", new { Area = "BulkFGT" })",
+            url: "@Url.Action("FailMail", "GarmentTest", new { Area = "BulkFGT" })",
             type: 'POST',
             contentType: "application/json; charset=utf-8",
             data: JSON.stringify({ ID: $('#Detail_ID').val(), No: $('#Detail_No').val(), TO: to, CC: cc }),
